implement Monitoring configuration
